--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "logInSignUp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/img.avif",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -20,7 +20,7 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "icon": "./assets/images/img.avif"
     },
     "plugins": [
       "expo-router",
